Main Service Implemented